<resources>
    <string name="app_name">baksombi</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_profile">Profile</string>
    <string name="reminder_title">Course reminder</string>
    <string name="reminder_content">Hey! it has been a while since you opened the app.</string>
    <string name="discover_daily">Daily Discover</string>
    <string name="my_course">My Courses</string>
    <string name="ovipare">Ovipare</string>
    <string name="food">Food</string>
    <string name="animal_home">Home</string>
    <string name="read_article">Read Wikipedia</string>
    <string name="welcome">Welcome</string>
    <string name="featured_videos">Learn from videos</string>
    <string name="categories">Categories</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="animal_question">What is this animal?</string>
    <string name="Score">Your score is</string>
    <string name="discover">Discover</string>
    <string name="my_courses">My courses</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_account">Already have an account?</string>
    <string name="no_account">No account yet?</string>

</resources>