<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:cnb_iconColor="?colorOnPrimary"
        app:cnb_backgroundColor="?colorPrimary"
        app:cnb_textColor="?colorOnPrimary" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_games_24"
        android:title="@string/title_quiz"
        app:cnb_iconColor="?colorOnPrimary"
        app:cnb_backgroundColor="?colorPrimary"
        app:cnb_textColor="?colorOnPrimary"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile"
        app:cnb_iconColor="?colorOnPrimary"
        app:cnb_backgroundColor="?colorPrimary"
        app:cnb_textColor="?colorOnPrimary"/>

</menu>